--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -12,6 +12,14 @@
 
 {% block content %}
 <div class="container-fluid">
+    {% for message in messages %}
+      <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="True">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    {% endfor %}
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
     <h2><i class="fa fa-list" aria-hidden="true">&nbsp</i>HIV Drug Resistance Testing Results</h2>
 </div>
@@ -30,7 +38,7 @@
         <tbody>
             {% for result in results %}
             <tr>
-                <td><a href="{% url 'sampleAnalysisResultsDetails' result.sample_ID %}">{{result.sample_ID}}</a></td>
+                <td><a href="#">{{result.sample_ID}}</a></td>
                 <td>{{result.drugClass}}</td>
                 <td>{{result.drugName}}</td>
                 <td>{{result.drugScore}}</td>
@@ -49,7 +57,7 @@
 <script>
   $(document).ready(function() {
     var table = $('#hivdr').DataTable({
-        select: true,
+       // select: true,
         dom: 'BPrtip',
         
         buttons: [
