--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/select/1.6.1/css/select.bootstrap4.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.5/css/buttons.dataTables.min.css">
-  
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>  
@@ -37,9 +38,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
   <script src="https://cdn.datatables.net/buttons/2.3.5/js/buttons.html5.min.js"></script>
   <script src="https://cdn.datatables.net/buttons/2.3.5/js/buttons.print.min.js"></script>
-  
-  <title>HIVseqDB</title>
-<style>
+  <style>
   body{
     width: 90%;
     margin: auto;
@@ -106,7 +105,7 @@
   </div>
 </div> -->
 
-<footer class="bg-light text-center mt-4 pt-3 p-3">
+<footer class="bg-light text-center mt-4 pt-3">
   <!-- Grid container -->
   <div class="container mt-4">
     <!--Grid row-->
@@ -143,22 +142,19 @@
           <li><a href="/browse/ngs-data/">Data browser</a></li>    
           <li><a href="/analysis/create/">Data Analysis</a></li>    
           <li><a href="/analysis/results/">Analyses browser</a></li>    
-          <li><a href="#">Tutorial</a></li>       
         </ul>
       <!--Grid column-->
     </div>
   </div>
 
   <!--Grid row-->
-  <div class="row">
-    <div class="col-md-12 text-dark">
-      <ul class="list-unstyled text-right">
-        <hr>
-        <li>&copy; <script>document.write(new Date().getFullYear())</script> Uganda Virus Research Institute </li>
-      </ul>
-    </div>
+  <hr>
+  <div class="row text-dark">
+    <div class="col-md-2 text-left"><p><a href="#">Tutorial</a></p></div>
+    <div class="col-md-2 text-left"><p><a href="#">Documentation</a></p></div>
+    <div class="col-md-4 text-center"><p>Contact us: <a href="admin@hivseqdb.org">admin@hivseqdb.org</a></p></div>
+    <div class="col-md-4 text-right"><p><a>&copy; <script>document.write(new Date().getFullYear())</script> Uganda Virus Research Institute</a></p></div>
   </div>
-
   </div>
   <!-- Grid container -->
 </footer>
