--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -11,12 +11,21 @@
 {% endblock %}
 
 {% block content %}
+
+{% for message in messages %}
+      <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="True">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    {% endfor %}
 <!-- The home cards -->
     <div class="row mt-3 pt-3 p-3 border-bottom border-info">
         <h1><i class="fa fa-home" aria-hidden="true">&nbsp</i>HIVseqDB</h1>
     </div> 
     <div class="row pt-2 mb-5 p-2 shadow">    
-        <p>Portable webserver for management and analysis of NGS-based HIV Drug Resistance Data</p>
+        <p>Portable resource for management and analysis of NGS-based HIV Drug Resistance Data</p>
     </div>
     <div class="row border p-5 shadow">
         <div class="col-md-4">
@@ -25,7 +34,7 @@
                     <h4 class="card-title"> <i class="fa fa-database" aria-hidden="true"></i>
                         &nbsp Data management</h4>
                     <p class="card-text">Secure management of uploaded NGS data, matched with sample data.
-                        HIVseqDB provides a searchable database protected through user authefication.
+                        HIVseqDB provides a searchable database protected through user authentification.
                     </p>
                     <a class="btn btn-secondary btn-lg btn-block check" href="#">More</a>
                 </div>
@@ -36,8 +45,7 @@
                 <div class="card-body">
                     <h4 class="card-title"><i class="fa fa-sliders" aria-hidden="true"></i>
                         &nbsp Data analysis</h4>
-                    <p class="card-text">NGS-based HIVDR data is analysed using the state of the art tools. Results given off in user friendly reports and data files
-                        given off as exports in readable formats.</p>
+                    <p class="card-text">NGS-based HIVDR data is asynchronously analysed using state of the art tools. Results are given off in user friendly pages and exportable in various formats.</p>
                     <a class="btn btn-secondary btn-lg btn-block" href="#">More</a>
                 </div>
             </div>
