--- a/templates/search/ngs-data.html
+++ b/templates/search/ngs-data.html
@@ -12,6 +12,14 @@
 
 {% block content %}
 <div class="container-fluid">
+    {% for message in messages %}
+    <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="True">&times;</span>
+      </button>
+      {{ message }}
+    </div>
+  {% endfor %}
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
     <h2><i class="fa fa-search" aria-hidden="true">&nbsp</i>HIV-1 NGS data</h2>
 </div>
