--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -23,7 +23,7 @@
 <div class="mt-3 pt-3 p-3 border-bottom border-info">
     <h2><i class="fa fa-list" aria-hidden="true">&nbsp</i>HIV Drug Resistance Testing Results</h2>
 </div>
-<div class="mt-3 pt-3 border p-4 shadow">
+<div class="mt-3 pt-3 border p-3 border shadow">
     <table id="hivdr" class="table table-striped nowrap">
         <thead>
             <tr>
