--- a/templates/analysis/minority-variants.html
+++ b/templates/analysis/minority-variants.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-fluid">
 {% for message in messages %}
       <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -14,9 +15,8 @@
         {{ message }}
       </div>
     {% endfor %}
-<div class="row mt-3 pt-3 mr-auto">
-    <!-- Column 2 for graph tabs -->
-    <div class="col-md-12 p-3 border shadow">
+<div class="row mt-3 pt-3 p-3 border shadow">
+    <div class="col-md-12">
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
               <button class="nav-link active" id="nav-major-tab" data-toggle="tab" data-target="#pr" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Protease</button>
@@ -24,7 +24,7 @@
               <button class="nav-link" id="nav-minor-tab" data-toggle="tab" data-target="#int" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Integrase</button>
             </div>
         </nav>
-          <div class="tab-content">
+        <div class="tab-content">
             <div id="pr" class="tab-pane fade show active mt-4">
                 <div id="pr-drms-plot"></div>
             </div>
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div class="row mt-3 pt-3 mr-auto">
+<div class="row mt-3 pt-3 p-3 border shadow">
     <table id="hivdr" class="table table-striped">
         <thead>
             <tr>
@@ -71,6 +71,7 @@
         </tbody>
     </table>
     <hr>    
+</div>
 </div>
 {% endblock %}
 
