--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -81,8 +81,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/uploads/ngs-data-batch/">NGS: Batch upload</a>
             <a class="dropdown-item" href="/uploads/ngs-data-single/">NGS: Single sample upload</a>
-            <a class="dropdown-item" href="/uploads/consensus-data-batch/">Consensus: Batch upload</a>
-            <a class="dropdown-item" href="/uploads/consensus-data-single/">Consensus: Single sample upload</a>
+            <!-- <a class="dropdown-item" href="/uploads/consensus-data-batch/">Consensus: Batch upload</a>
+            <a class="dropdown-item" href="/uploads/consensus-data-single/">Consensus: Single sample upload</a> -->
           </div>
         </li>
 
@@ -91,7 +91,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/browse/sample-data/">Sample data</a>
             <a class="dropdown-item" href="/browse/ngs-data/">NGS data</a>
-            <a class="dropdown-item" href="#">Consensus sequences</a>
+            <!-- <a class="dropdown-item" href="#">Consensus sequences</a> -->
           </div>
         </li>
         
