--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -151,7 +151,7 @@
         <hr>  
         <ul class="list-unstyled text-left">
           <li><a href="/home/">Home</a></li> 
-          <li><a href="/uploads/ngs-data/">Data upload</a></li> 
+          <li><a href="/uploads/ngs-data-batch/">Data upload</a></li> 
           <li><a href="/browse/ngs-data/">Data browser</a></li>    
           <li><a href="/analysis/create/">Data Analysis</a></li>    
           <li><a href="/analysis/results/">Analyses browser</a></li>    
