--- a/templates/uploads/batch-upload-ngs.html
+++ b/templates/uploads/batch-upload-ngs.html
@@ -36,7 +36,7 @@
 <div class="container-fluid">
   <div class="mt-3 pt-3 p-3 border shadow">
     <div class="p-3 border-bottom border-info">    
-      <h2><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload NGS Data and corresponding sample data </h2>
+      <h2><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Batch Upload of NGS Data and corresponding sample data </h2>
   </div> 
 </div> 
 
