Add visualisation of mutational load

--- a/templates/analysis/minority-variants-sample.html
+++ b/templates/analysis/minority-variants-sample.html
@@ -111,7 +111,7 @@
         yAxis: {
                min: 0,
                title: {
-                  text: 'Mutation frequency and coverage',
+                  text: 'Mutation frequency and mutational load',
                 //   align: 'high'
                },
                labels: {
@@ -123,7 +123,7 @@
             data: pr_majority_freq
         },
         {
-            name: 'Coverage',
+            name: 'Mutational load',
             data: pr_majority_cov
         }],
         accessibility: {
@@ -150,7 +150,7 @@
         yAxis: {
                min: 0,
                title: {
-                  text: 'Mutation frequency and coverage',
+                  text: 'Mutation frequency and mutational load',
                 //   align: 'high'
                },
                labels: {
@@ -162,7 +162,7 @@
             data: pr_minority_freq
         },
         {
-            name: 'Coverage',
+            name: 'Mutational load',
             data: pr_minority_cov
         }],
         accessibility: {
@@ -174,14 +174,14 @@
 <script>
     rt_nrti={{rt_nrti|safe}};
     rt_nrti_freq={{rt_nrti_freq|safe}};
-    rt_nrti_cov={{rt_nrti_freq|safe}};
+    rt_nrti_cov={{rt_nrti_cov|safe}};
 
     Highcharts.chart('nrti-drms-plot', {
         chart: {
             type: 'column'
         },
         title: {
-            text: 'Frequency of NRTI Drug Resistance Mutations RT'
+            text: 'Frequency of NRTI Drug Resistance Mutations in RT'
         },
         xAxis: {
             categories: rt_nrti
@@ -189,7 +189,7 @@
         yAxis: {
                min: 0,
                title: {
-                  text: 'Mutation frequency and coverage',
+                  text: 'Mutation frequency and mutational load',
                 //   align: 'high'
                },
                labels: {
@@ -201,7 +201,7 @@
             data: rt_nrti_freq
         },
         {
-            name: 'Coverage',
+            name: 'Mutational load',
             data: rt_nrti_cov
         }],
         accessibility: {
@@ -213,14 +213,14 @@
 <script>
     rt_nnrti={{rt_nnrti|safe}};
     rt_nnrti_freq={{rt_nnrti_freq|safe}};
-    rt_nnrti_cov={{rt_nnrti_freq|safe}};
+    rt_nnrti_cov={{rt_nnrti_cov|safe}};
 
     Highcharts.chart('nnrti-drms-plot', {
         chart: {
             type: 'column'
         },
         title: {
-            text: 'Frequency of NNRTI Drug Resistance Mutations in RT'
+            text: 'Mutational load of NNRTI Drug Resistance Mutations in RT'
         },
         xAxis: {
             categories: rt_nnrti
@@ -228,7 +228,7 @@
         yAxis: {
                min: 0,
                title: {
-                  text: 'Mutation frequency and coverage',
+                  text: 'Mutational load (Viral load X mutation frequency)',
                 //   align: 'high'
                },
                labels: {
@@ -240,7 +240,7 @@
             data: rt_nnrti_freq
         },
         {
-            name: 'Coverage',
+            name: 'Mutational load',
             data: rt_nnrti_cov
         }],
         accessibility: {
