--- a/templates/analysis/new-analysis.html
+++ b/templates/analysis/new-analysis.html
@@ -80,33 +80,33 @@
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label for="{{ form.error_Rate.id_for_label }}" class="form-label">{{ form.error_Rate.label }}: </label>
-                            <input name="{{ form.error_Rate.html_name }}" type="text" class="form-control" id="{{ form.error_Rate.id_for_label }}" placeholder="Default is 0.01" required>      
+                            <input name="{{ form.error_Rate.html_name }}" type="text" class="form-control" id="{{ form.error_Rate.id_for_label }}" placeholder="Default is 0.01">      
                         </div>
                         <div class="form-group col-md-4">
                             <label for="{{ form.length_Cutoff.id_for_label }}" class="form-label">{{ form.length_Cutoff.label }}: </label>
-                            <input name="{{ form.length_Cutoff.html_name }}" type="text" class="form-control" id="{{ form.length_Cutoff.id_for_label }}" placeholder="Default is 100" required>     
+                            <input name="{{ form.length_Cutoff.html_name }}" type="text" class="form-control" id="{{ form.length_Cutoff.id_for_label }}" placeholder="Default is 100">     
                         </div>
                         <div class="form-group col-md-4">
                             <label for="{{ form.minimum_Allele_Count.id_for_label }}" class="form-label">{{ form.minimum_Allele_Count.label }}: </label>
-                            <input name="{{ form.minimum_Allele_Count.html_name }}" type="text" class="form-control" id="{{ form.minimum_Allele_Count.id_for_label }}" placeholder="Default is 20" required>      
+                            <input name="{{ form.minimum_Allele_Count.html_name }}" type="text" class="form-control" id="{{ form.minimum_Allele_Count.id_for_label }}" placeholder="Default is 20">      
                         </div>
                   </div>
                   <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="{{ form.minimum_Variant_Quality.id_for_label }}" class="form-label">{{ form.minimum_Variant_Quality.label }}: </label>
-                        <input name="{{ form.minimum_Variant_Quality.html_name }}" type="text" class="form-control" id="{{ form.minimum_Variant_Quality.id_for_label }}" placeholder="Default is 0.01" required>      
+                        <input name="{{ form.minimum_Variant_Quality.html_name }}" type="text" class="form-control" id="{{ form.minimum_Variant_Quality.id_for_label }}" placeholder="Default is 0.01">      
                     </div>
                     <div class="form-group col-md-4">
                         <label for="{{ form.score_Cutoff.id_for_label }}" class="form-label">{{ form.score_Cutoff.label }}: </label>
-                        <input name="{{ form.score_Cutoff.html_name }}" type="text" class="form-control" id="{{ form.score_Cutoff.id_for_label }}" placeholder="Default is 100" required>     
+                        <input name="{{ form.score_Cutoff.html_name }}" type="text" class="form-control" id="{{ form.score_Cutoff.id_for_label }}" placeholder="Default is 100">     
                     </div>
                     <div class="form-group col-md-4">
                         <label for="{{ form.target_Coverage.id_for_label }}" class="form-label">{{ form.target_Coverage.label }}: </label>
-                        <input name="{{ form.target_Coverage.html_name }}" type="text" class="form-control" id="{{ form.target_Coverage.id_for_label }}" placeholder="Default is 20" required>      
+                        <input name="{{ form.target_Coverage.html_name }}" type="text" class="form-control" id="{{ form.target_Coverage.id_for_label }}" placeholder="Default is 20">      
                     </div>
                     <div class="form-group col-md-10">
                       <label for="{{ form.mutation_Database.id_for_label }}" class="form-label">{{ form.mutation_Database.label }}: </label>
-                      <input name="{{ form.mutation_Database.html_name }}" type="text" class="form-control" id="{{ form.mutation_Database.id_for_label }}" placeholder="HIVDB 9.2" required>      
+                      <input name="{{ form.mutation_Database.html_name }}" type="text" class="form-control" id="{{ form.mutation_Database.id_for_label }}" placeholder="Stanford HIVDB" disabled>      
                   </div>
                 </div>
               </div>
