--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -21,18 +21,28 @@
       </div>
     {% endfor %}
 
+    <div class="alert alert-info alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        Note: The NGS data used in this demonstration is publically available at the NCBI Sequence Read Archive (SRA) and the European Nucleotide Archive (ENA), Bioproject accession PRJNA340290. Corresponding sample data was obtained from the associated publication. Many thanks to Avila-Ríos, Santiago, et al. "HIV drug resistance in antiretroviral treatment-naïve individuals in the largest public hospital in Nicaragua, 2011-2015." PLoS One 11.10 (2016): e0164156.'
+    </div>
+
+
 <div class="row mt-3 pt-3 p-3 border shadow">
     <div class="col-md-12">
         <div class="p-3 border-bottom border-info">
             <h2><i class="fa fa-list" aria-hidden="true">&nbsp</i>HIV Drug Resistance Testing Results</h2>
         </div>
-        <ul class="mt-2">
-            <p><i class="fa fa-search" aria-hidden="true">&nbsp</i>Browse drug resistance results by samples, drug class, drug name, drug susceptibility and project.</p>
-            <p><i class="fa fa-search" aria-hidden="true">&nbsp</i>Click on the project ID to get details and visualisations of majority and minority variants.</p>
-        </ul>
     </div>
 </div>
 
+<div class="row mt-3 pt-3 p-4 shadow">
+    <ul>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Use the filters to cutomize your search.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click <Strong>print drug resistance report</Strong> to retrieve an exportable/printable format of the drug resistance report for a particular sample.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click <strong>minority variants summary</strong> to retrieve data on HIV-1 variants for a particular sample.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click the sample name and project name to retrieve all results for a particular sample and project respectively.</p>
+    </ul>
+</div>
 
 <div class="row mt-3 pt-3 p-3 border shadow">
     <div class="col-md-12">
@@ -57,8 +67,8 @@
                 <td>{{result.drugName}}</td>
                 <td>{{result.drugScore}}</td>
                 <td>{{result.susceptibility}}</td>
-                <td><a href="{% url 'sampleDrugResistance' result.sample_ID %}">Drug resistance report</a></td>
-                <td><a href="{% url 'sampleMinorityVariants' result.sample_ID %}">Minority variants summary</a></td>
+                <td><a href="{% url 'sampleDrugResistance' result.sample_ID %}">print drug resistance report</a></td>
+                <td><a href="{% url 'sampleMinorityVariants' result.sample_ID %}">minority variants summary</a></td>
                 <td><a href="{% url 'projectAnalysisResults' result.project_ID %}">{{result.project_ID}}</a></td>
             </tr>
             {% endfor %}
