--- a/templates/analysis/minority-variants-sample.html
+++ b/templates/analysis/minority-variants-sample.html
@@ -15,6 +15,12 @@
         {{ message }}
       </div>
     {% endfor %}
+
+    <div class="alert alert-info alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        Note: The NGS data used in this demonstration is publically available at the NCBI Sequence Read Archive (SRA) and the European Nucleotide Archive (ENA), Bioproject accession PRJNA340290. Corresponding sample data was obtained from the associated publication. Many thanks to Avila-Ríos, Santiago, et al. "HIV drug resistance in antiretroviral treatment-naïve individuals in the largest public hospital in Nicaragua, 2011-2015." PLoS One 11.10 (2016): e0164156.'
+    </div>
+
 <div class="row mt-3 pt-3 p-3 border shadow">
     <div class="col-md-12">
         <div class="p-3 border-bottom border-info">
