--- a/templates/uploads/single-upload-ngs.html
+++ b/templates/uploads/single-upload-ngs.html
@@ -29,11 +29,26 @@
         {{ message }}
       </div>
     {% endfor %}
+
+    <div class="alert alert-info alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Info!</strong>   This instance only allows browsing of already analysed data. To upload and analyse own data, kindly install an instance as indicated in the documentation.
+      </div>
+  
   <div class="mt-3 pt-3 p-3 border shadow">
       <div class="p-3 border-bottom border-info">
           <h2><i class="fa fa-cloud-upload" aria-hidden="true">&nbsp</i>Upload NGS data for a single sample</h2>
       </div>
   </div>
+
+  <div class="mt-3 pt-3 p-4 shadow">
+    <ul>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> HIVseqDB currently supports paired-end NGS data as compressed or un-compressed FASTQ files (.fastq, .fastq.gz, .fq, .fq.gz).</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> We recommed that FASTQ files be named as follows: <Strong>sampleName_1.fastq</Strong> and <Strong>sampleName_2.fastq</Strong> for forward and reverse reads respectively.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i> The sample name in sample information section should match with sample name in the .fastq or fastq.gz file names.</p>    
+      </ul>
+  </div>
+
 <div class="mt-3 pt-3 border p-4 shadow">
     <form method="POST">
     {{ form.errors }}
