Update guest login

--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -37,7 +37,7 @@
 
 <div class="row mt-3 pt-3 p-4 shadow">
     <ul>
-        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Use the filters to cutomize your search.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Use the filters to customize your search.</p>
         <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click <Strong>print drug resistance report</Strong> to retrieve an exportable/printable format of the drug resistance report for a particular sample.</p>
         <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click <strong>minority variants summary</strong> to retrieve data on HIV-1 variants for a particular sample.</p>
         <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click the sample name and project name to retrieve all results for a particular sample and project respectively.</p>
