--- a/templates/base/login.html
+++ b/templates/base/login.html
@@ -105,6 +105,27 @@ input[type="submit"]:hover{
     outline: none;
     font-size: 15px;
 }
+
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 75%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  text-align: center;
+  margin-top: 10px;
+}
 </style>
   <body>
     <div class="center">
@@ -123,11 +144,33 @@ input[type="submit"]:hover{
       </form>
       <hr>
         <div class="signup_link">
-           <a href="#">Forgot password?</a>
-        </div>
+          <button type="button" class="collapsible"><a>Continue as Guest?</a></button>
+          <div class="content">
+            <br>
+            <p>Username: guest, Password: H9p#a7!4</p>
+          </div>
+      </div>
+      <hr>
         <div class="signup_link">
           <a href="/home/">Home</a>
         </div>
     </div>
   </body>
+
+  <script>
+    var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+  </script>
 </html>
