--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -94,6 +94,10 @@
             <!-- <a class="dropdown-item" href="#">Consensus sequences</a> -->
           </div>
         </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link" style="color:#fff" href="https://alfredug.github.io/hivseqdb-docker/">Documentation</a>
+        </li>
         
         <li class="nav-item">
           {% if request.user.is_authenticated %}
