Add UVRI logo to DR report

--- a/templates/uploads/single-upload-ngs.html
+++ b/templates/uploads/single-upload-ngs.html
@@ -207,8 +207,8 @@
         </div>
         </div>
     </div>
-      <button type="submit" class="btn btn-success">Upload Data</button>
-      <button type="reset" class="btn btn-danger">Cancel</button>
+      <button type="submit" class="btn btn-success" disabled>Upload Data</button>
+      <button type="reset" class="btn btn-danger" disabled>Cancel</button>
     </form>
 </div>
 <!-- https://stackoverflow.com/questions/58956947/django-crispy-forms-with-bootstrap4-not-showing-selected-result-in-browse-file-f -->
