--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -36,7 +36,7 @@
                     <p class="card-text">Secure management of uploaded NGS data, matched with sample data.
                         HIVseqDB provides a searchable database protected through user authentification.
                     </p>
-                    <a class="btn btn-secondary btn-lg btn-block check" href="#">More</a>
+                    <a class="btn btn-secondary btn-lg btn-block check" href="https://github.com/AlfredUg/HIVseqDB/wiki/Overview#data-management">More</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                     <h4 class="card-title"><i class="fa fa-sliders" aria-hidden="true"></i>
                         &nbsp Data analysis</h4>
                     <p class="card-text">NGS-based HIVDR data is asynchronously analysed using state of the art tools. Results are given off in user friendly pages and exportable in various formats.</p>
-                    <a class="btn btn-secondary btn-lg btn-block" href="#">More</a>
+                    <a class="btn btn-secondary btn-lg btn-block" href="https://github.com/AlfredUg/HIVseqDB/wiki/Overview#data-analysis">More</a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
                         &nbsp Portability</h4>
                         <p class="card-text"> HIVseqDB can be deployed on different computing environments. It is distributed with guidelines for setting it up for 
                             on-prem and cloud-based compute solutions.</p>
-                        <a class="btn btn-secondary btn-lg btn-block" href="#">More</a>
+                        <a class="btn btn-secondary btn-lg btn-block" href="https://github.com/AlfredUg/HIVseqDB/wiki/Overview#portability">More</a>
                     </div>
             </div>
         </div>
