--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -70,6 +70,9 @@
         <li class="nav-item">
           <a class="nav-link" style="color:#fff" href="/analysis/results/">Browse analyses</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color:#fff" href="/reports/plots/">Summary plots</a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link" style="color:#fff" href="/tools/generate-drug-resistance-report/">Generate drug resistance report</a>
         </li> -->
