--- a/templates/analysis/analysis-results.html
+++ b/templates/analysis/analysis-results.html
@@ -20,10 +20,26 @@
         {{ message }}
       </div>
     {% endfor %}
-<div class="mt-3 pt-3 p-3 border-bottom border-info">
-    <h2><i class="fa fa-list" aria-hidden="true">&nbsp</i>HIV Drug Resistance Testing Results</h2>
+
+<div class="row mt-3 pt-3 p-3 border shadow">
+    <div class="col-md-12">
+        <div class="p-3 border-bottom border-info">
+            <h2><i class="fa fa-list" aria-hidden="true">&nbsp</i>HIV Drug Resistance Testing Results</h2>
+        </div>
+    </div>
 </div>
-<div class="mt-3 pt-3 border p-3 border shadow">
+
+<div class="row mt-3 pt-3 p-4 shadow">
+    <ul>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Use the filters to customize your search.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click <Strong>print drug resistance report</Strong> to retrieve an exportable/printable format of the drug resistance report for a particular sample.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click <strong>minority variants summary</strong> to retrieve data on HIV-1 variants for a particular sample.</p>
+        <p><i class="fa fa-list" aria-hidden="true">&nbsp</i>Click the sample name and project name to retrieve all results for a particular sample and project respectively.</p>
+    </ul>
+</div>
+
+<div class="row mt-3 pt-3 p-3 border shadow">
+    <div class="col-md-12">
     <table id="hivdr" class="table table-striped nowrap">
         <thead>
             <tr>
@@ -32,23 +48,28 @@
                 <th>Drug Name</th>
                 <th>Drug Score</th>
                 <th>Susceptibilty</th>
+                <th>Drug resistance report</th>
+                <th>Sample Minority variants</th>
                 <th>Project ID</th>
             </tr>
         </thead>
         <tbody>
             {% for result in results %}
             <tr>
-                <td><a href="#">{{result.sample_ID}}</a></td>
+                <td><a href="{% url 'sampleAnalysisResults' result.sample_ID %}">{{result.sample_ID}}</a></td>
                 <td>{{result.drugClass}}</td>
                 <td>{{result.drugName}}</td>
                 <td>{{result.drugScore}}</td>
                 <td>{{result.susceptibility}}</td>
-                <td><a href="{% url 'projectMinorityVariants' result.project_ID %}">{{result.project_ID}}</a></td>
+                <td><a href="{% url 'sampleDrugResistance' result.sample_ID %}">print drug resistance report</a></td>
+                <td><a href="{% url 'sampleMinorityVariants' result.sample_ID %}">minority variants summary</a></td>
+                <td><a href="{% url 'projectAnalysisResults' result.project_ID %}">{{result.project_ID}}</a></td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     <hr>
+</div>
 </div>
 <br>
 </div>
