--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,7 +7,6 @@
   <!--   template block for page specific js files       -->
   {% block top_js %}
   {% endblock %}
-  <!--   template block for page specific css files       -->
   {% block css %}
   {% endblock %} 
   <meta charset="utf-8">
@@ -43,6 +42,7 @@
     width: 90%;
     margin: auto;
   }
+
   .footer {
       position: absolute;
       right: 0;
@@ -70,18 +70,38 @@
         <li class="nav-item">
           <a class="nav-link" style="color:#fff" href="/analysis/results/">Browse analyses</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color:#fff" href="/reports/plots/">Summary plots</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" style="color:#fff" href="/tools/generate-drug-resistance-report/">Generate drug resistance report</a>
+        </li> -->
       </ul>
       <ul class="navbar-nav ml-auto">
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#fff" href="#">Data upload</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/uploads/ngs-data-batch/">NGS: Batch upload</a>
+            <a class="dropdown-item" href="/uploads/ngs-data-single/">NGS: Single sample upload</a>
+            <!-- <a class="dropdown-item" href="/uploads/consensus-data-batch/">Consensus: Batch upload</a>
+            <a class="dropdown-item" href="/uploads/consensus-data-single/">Consensus: Single sample upload</a> -->
+          </div>
+        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#fff" href="#">Data browser</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/browse/sample-data/">Sample data</a>
             <a class="dropdown-item" href="/browse/ngs-data/">NGS data</a>
+            <!-- <a class="dropdown-item" href="#">Consensus sequences</a> -->
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link mr-auto" style="color:#fff" href="/uploads/ngs-data/">Data upload</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link" style="color:#fff" href="https://alfredug.github.io/hivseqdb-docker/">Documentation</a>
         </li>
+        
         <li class="nav-item">
           {% if request.user.is_authenticated %}
           <a class="nav-link" style="color:#fff" href="/logout/">Log out</a>
@@ -138,7 +158,7 @@
         <hr>  
         <ul class="list-unstyled text-left">
           <li><a href="/home/">Home</a></li> 
-          <li><a href="/uploads/ngs-data/">Data upload</a></li> 
+          <li><a href="/uploads/ngs-data-batch/">Data upload</a></li> 
           <li><a href="/browse/ngs-data/">Data browser</a></li>    
           <li><a href="/analysis/create/">Data Analysis</a></li>    
           <li><a href="/analysis/results/">Analyses browser</a></li>    
@@ -150,9 +170,8 @@
   <!--Grid row-->
   <hr>
   <div class="row text-dark">
-    <div class="col-md-2 text-left"><p><a href="#">Tutorial</a></p></div>
-    <div class="col-md-2 text-left"><p><a href="#">Documentation</a></p></div>
-    <div class="col-md-4 text-center"><p>Contact us: <a href="admin@hivseqdb.org">admin@hivseqdb.org</a></p></div>
+    <div class="col-md-4 text-left"><p><a href="https://alfredug.github.io/hivseqdb-docker/">Documentation</a></p></div>
+    <div class="col-md-4 text-center"><p>Contact us: <a href="#">admin@hivseqdb.org</a></p></div>
     <div class="col-md-4 text-right"><p><a>&copy; <script>document.write(new Date().getFullYear())</script> Uganda Virus Research Institute</a></p></div>
   </div>
   </div>
@@ -162,5 +181,4 @@
 {% block js %}
 {% endblock %}
 </html>
-
 
