Add drug resistance plots

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -71,7 +71,7 @@
           <a class="nav-link" style="color:#fff" href="/analysis/results/">Browse analyses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color:#fff" href="/reports/plots/">Summary plots</a>
+          <a class="nav-link" style="color:#fff" href="/analysis/summary-plots/">Summary plots</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" style="color:#fff" href="/tools/generate-drug-resistance-report/">Generate drug resistance report</a>
