Add secret key to README

--- a/templates/analysis/new-analysis.html
+++ b/templates/analysis/new-analysis.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="form-group col-md-12">
                       <label for="{{ form.mutation_Database.id_for_label }}" class="form-label">{{ form.mutation_Database.label }}: </label>
-                      <input name="{{ form.mutation_Database.html_name }}" type="text" class="form-control" id="{{ form.mutation_Database.id_for_label }}" value="Stanford HIVdb" required>      
+                      <input name="{{ form.mutation_Database.html_name }}" type="text" class="form-control" id="{{ form.mutation_Database.id_for_label }}" value="Stanford HIVdb" required readonly>      
                   </div>
                 </div>
               </div>
