--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -75,7 +75,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/analysis/summary-plots/PR">Protease inhibitors</a>
             <a class="dropdown-item" href="/analysis/summary-plots/RT">Reverse transcriptase inhibitors</a>
-            <a class="dropdown-item" href="/analysis/summary-plots/IN">Integrase inhibitors</a>
+            <a class="dropdown-item" href="#">Integrase inhibitors</a>
           </div>
         </li>
         <!-- <li class="nav-item">
@@ -104,7 +104,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link" style="color:#fff" href="https://alfredug.github.io/hivseqdb-docker/">Documentation</a>
+          <a class="nav-link" style="color:#fff" href="https://alfredug.github.io/HIVseqDB/">Documentation</a>
         </li>
         
         <li class="nav-item">
