Fix alignment of div elements on footer

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -132,14 +132,14 @@
 
 <footer class="bg-light text-center mt-4 pt-3">
   <!-- Grid container -->
-  <div class="container mt-4">
+  <div class="container-fluid">
     <!--Grid row-->
-    <div class="row">
+    <div class="row mt-3 pt-3 p-3 ml-3 mr-3">
       <!--Grid column-->
       <div class="col-md-6 text-dark">
         <h5 class="mb-0 text-left" >Funding partners</h5>
         <hr>  
-        <ul class="list-unstyled text-justify">
+        <ul class="list-unstyled text-left">
             <li>The National Institutes of Health (NIH) Common Fund [NIH award number U2RTW010672].</li> 
             <li>The UK Medical Research Council (MRC) and UK Department for International Development (DFID) 
             that is under the MRC/DFID Concordat agreement and is also part of  EDCTP2 programme supported by the European Union.</li>
@@ -174,7 +174,8 @@
 
   <!--Grid row-->
   <hr>
-  <div class="row text-dark">
+  <div class="row text-dark p-3 ml-3 mr-3">
+
     <div class="col-md-4 text-left"><p><a href="https://alfredug.github.io/hivseqdb-docker/">Documentation</a></p></div>
     <div class="col-md-4 text-center"><p>Contact us: <a href="#">admin@hivseqdb.org</a></p></div>
     <div class="col-md-4 text-right"><p><a>&copy; <script>document.write(new Date().getFullYear())</script> Uganda Virus Research Institute</a></p></div>
