Update analysis results template file

--- a/templates/analysis/new-analysis.html
+++ b/templates/analysis/new-analysis.html
@@ -110,8 +110,8 @@
               </div>
         </div>
         <hr>
-      <button type="submit" class="btn btn-success" disabled>Start analysis</button>
-      <button type="reset" class="btn btn-danger" disabled>Cancel</button>
+      <button type="submit" class="btn btn-success">Start analysis</button>
+      <button type="reset" class="btn btn-danger">Cancel</button>
     </form>
 </div>
 </div>
