Add info messages on demo site

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -119,6 +119,13 @@
   </nav>
 
 <div class="container-fluid"><br>
+
+  <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <Strong>INFO:</Strong> This instance only allows browsing of already analysed data. To upload and analyse own data, kindly install an instance as indicated in the documentation    
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 {% block content %}
 {% endblock %}
 </div>
@@ -176,7 +183,7 @@
   <hr>
   <div class="row text-dark p-3 ml-3 mr-3">
 
-    <div class="col-md-4 text-left"><p><a href="https://alfredug.github.io/hivseqdb-docker/">Documentation</a></p></div>
+    <div class="col-md-4 text-left"><p><a href="https://alfredug.github.io/HIVseqDB/">Documentation</a></p></div>
     <div class="col-md-4 text-center"><p>Contact us: <a href="#">admin@hivseqdb.org</a></p></div>
     <div class="col-md-4 text-right"><p><a>&copy; <script>document.write(new Date().getFullYear())</script> Uganda Virus Research Institute</a></p></div>
   </div>
